feat: add news CRUD functionality
